Code review comments
Signed-off-by: mxtartaglia <maxi@swirldslabs.com>